# PortClear

./: .gitignore  README.md  build_exe.bat  main.py  requirements-windows.txt
Tauri/: README.md  index.html  package.json  pnpm-lock.yaml
Tauri/src/: App.tsx  styles.css
Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/src-tauri/capabilities/: default.json
Tauri/src-tauri/src/: lib.rs  main.rs
Tkinter/: README.md  main.py
Tkinter/docs/: READ.md
Tkinter/windows/: __init__.py  quick_panel.py
core/: __init__.py  actions.py  inspector.py  models.py  privilege.py
docs/: WINDOWS_TRAY_DESIGN.md
linux/: __init__.py  cli.py
windows/: gui.py  quick_panel.py  tray.py
