[package]
name = "portclear"
version = "0.1.0"
description = "PortClear Tauri desktop app"
authors = ["PortClear"]
edition = "2021"

[lib]
name = "portclear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
